<resources>
    <string name="app_name">Feelae</string>
    <string name="call_a_doctor_text">Appeller un médecin</string>
    <string name="add_psy_text">Mes docteurs</string>
    <string name="profile_button">Mon profil</string>
    <string name="monitoring_button">Mon suivi</string>
    <string name="waiting_room_cancel_button_text">Annuler</string>
    <string name="waiting_room_doctor_text">Dr. %1$s arrive dans un instant</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">ADRESSE EMAIL</string>
    <string name="hint_password">MOT DE PASSE</string>
    <string name="hint_confirm_password">CONFIRMER LE MOT DE PASSE</string>
    <string name="text_login">Se connecter</string>
    <string name="text_register">S\'enregistrer</string>
    <string name="error_message_email">Entrer un email valide</string>
    <string name="error_message_name">Entrer un nom</string>
    <string name="error_message_password">Entrer un mot de passe</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Vous avez déjà un compte ? Créer un compte</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="hint_forgot_password">Mot de passe oublié ?</string>
    <string name="hint_firstname">PRÉNOM</string>
    <string name="hint_lastname">NOM</string>
    <string name="nos_professionels_de_sant_disponible_24h_24">Nos professionels de santé disponible 24h/24</string>
    <string name="todo">TODO</string>
    <string name="consultez_un_m_decin_ou_que_vous_soyez">Consultez un médecin ou que vous soyez</string>
    <string name="mes_m_decins_traitants">Mes médecins traitants</string>
    <string name="ou">ou</string>
    <string name="un_m_decin_disponible">Un médecin disponible</string>
    <string name="x">X</string>
    <string name="appeller_mon_m_decin">Appeller mon médecin</string>
    <string name="speciality">speciality</string>
    <string name="annuler">annuler</string>
    <string name="quel_est_le_motif_de_votre_appel">Quel est le motif de votre appel ?</string>
    <string name="veuillez_choisir_le_motif_de_votre_appel_afin_que_nous_vous_mettions_en_relations_avec_un_sp_cialiste_disponible">Veuillez choisir le motif de votre appel afin que nous vous mettions en relations avec un spécialiste disponible</string>
    <string name="suivant">Suivant</string>
    <string name="quels_sont_vos_symptomes">Quels sont vos symptomes ?</string>
    <string name="veuillez_utliser_la_bare_de_recherche_pour_ajouter_un_symptome">Veuillez utliser la bare de recherche pour ajouter un symptome</string>
    <string name="mal_de_t_te_jambe">Mal de tête, jambe, etc…</string>
    <string name="terminer">terminer</string>
    <string name="estimated_time">Temps d\'attente estimé : 2 minutes</string>
    <string name="doctor_name">Dr Henry Fake</string>
</resources>
