<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SpecializationListActivity">

    <ProgressBar
        android:id="@+id/completionProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@color/mediumBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loader_container_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="431dp"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/completionProgressBar"
            tools:layout_editor_absoluteX="30dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/quel_est_le_motif_de_votre_appel"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/veuillez_choisir_le_motif_de_votre_appel_afin_que_nous_vous_mettions_en_relations_avec_un_sp_cialiste_disponible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/specialisation_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/loader_container_layout">

            <Button
                android:id="@+id/specialization_list_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:background="@android:color/transparent"
                android:text="@string/annuler" />

            <Button
                android:id="@+id/specialization_list_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/bluePrimary"
                android:text="@string/suivant"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loader_container_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>